# seclink

./: .dockerignore  Dockerfile  README.md  api.py  app.py  extract_links.py  pyproject.toml  retry.py  scan_example.http  virus_total_thorough_scanner.py  virus_total_url_scanner.py
static/: reset.css  styles.css
templates/: index.html  results.html  scan_result.html
