[tool.poetry]
name = "seclink"
version = "0.1.0"
description = ""
authors = ["ibrahimkoz <ibrahimkoz@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.10.5"
asyncio = "^3.4.3"
certifi = "^2024.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
